--- a/interface.htm
+++ b/interface.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script> 
 <script src="js/timeline.js"></script>
 <script src="js/timeline_widget.js"></script>
 
