--- a/interface.htm
+++ b/interface.htm
@@ -2,6 +2,9 @@
 <html>
 <head>
 
+<meta charset="utf-8">
+<title>Video Shot Annotator</title>
+
 <script type="text/javascript" src="https://www.google.com/jsapi"></script> 
 <script src="js/timeline.js"></script>
 <script src="js/timeline_widget.js"></script>
